Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,16 +40,48 @@
 
 <p>As well as downloading the IVM software you need to obtain the toolboxes specified below.</p>
 
-<p>|----------------------------------------------|-------------|
-| <strong>Toolbox</strong>                                  | <strong>Version</strong> |
-| <a href="/kern/downloadFiles/vrs0p165">KERN</a>         | 0.165       |
-| <a href="/prior/downloadFiles/vrs0p131">PRIOR</a>       | 0.131       |
-| <a href="/optimi/downloadFiles/vrs0p132">OPTIMI</a>     | 0.132       |
-| <a href="/rochol/downloadFiles/vrs0p12">ROCHOL</a>      | 0.12        |
-| <a href="/ndlutil/downloadFiles/vrs0p155">NDLUTIL</a>   | 0.155       |
-| <a href="/mltools/downloadFiles/vrs0p123">MLTOOLS</a>   | 0.123       |
-| <a href="/datasets/downloadFiles/vrs0p131">DATASETS</a> | 0.131       |
-| <a href="/noise/downloadFiles/vrs0p14">NOISE</a>        | 0.14        |</p>
+<table>
+<thead>
+<tr>
+<th><strong>Toolbox</strong></th>
+<th><strong>Version</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="/kern/downloadFiles/vrs0p165">KERN</a></td>
+<td>0.165</td>
+</tr>
+<tr>
+<td><a href="/prior/downloadFiles/vrs0p131">PRIOR</a></td>
+<td>0.131</td>
+</tr>
+<tr>
+<td><a href="/optimi/downloadFiles/vrs0p132">OPTIMI</a></td>
+<td>0.132</td>
+</tr>
+<tr>
+<td><a href="/rochol/downloadFiles/vrs0p12">ROCHOL</a></td>
+<td>0.12</td>
+</tr>
+<tr>
+<td><a href="/ndlutil/downloadFiles/vrs0p155">NDLUTIL</a></td>
+<td>0.155</td>
+</tr>
+<tr>
+<td><a href="/mltools/downloadFiles/vrs0p123">MLTOOLS</a></td>
+<td>0.123</td>
+</tr>
+<tr>
+<td><a href="/datasets/downloadFiles/vrs0p131">DATASETS</a></td>
+<td>0.131</td>
+</tr>
+<tr>
+<td><a href="/noise/downloadFiles/vrs0p14">NOISE</a></td>
+<td>0.14</td>
+</tr>
+</tbody>
+</table>
 
 <p>Finally you will also need the <a href="http://www.ncrg.aston.ac.uk/netlab/index.php">NETLAB toolbox</a> in your path and Anton Schwaighofer's SVM light MATLAB interface, available <a href="http://ida.first.fraunhofer.de/%7Eanton/software.html">here</a> to run the <code>demThreeFive</code> example which compares with <a href="http://svmlight.joachims.org/">SVM light</a> version 5.00.</p>
 
