Added index.html to file listings.

--- a/downloadFiles/vrs0p22/index.html
+++ b/downloadFiles/vrs0p22/index.html
@@ -4,6 +4,7 @@
     <a href="./index.md">./index.md</a><br>
     <a href="./matfiles.zip">./matfiles.zip</a><br>
     <a href="./mfiles.zip">./mfiles.zip</a><br>
+    <a href="./plfiles.zip">./plfiles.zip</a><br>
     <a href="./readme.txt">./readme.txt</a><br>
-  </body>
-</html>
+    <a href="./techInfo.txt">./techInfo.txt</a><br>
+    <a href="./versions.txt">./versions.txt</a><br>
