Added index.html to file listings.

--- a/downloadFiles/vrs0p31/index.html
+++ b/downloadFiles/vrs0p31/index.html
@@ -7,3 +7,5 @@
     <a href="./readme.txt">./readme.txt</a><br>
     <a href="./techInfo.txt">./techInfo.txt</a><br>
     <a href="./versions.txt">./versions.txt</a><br>
+  </body>
+</html>
