Added index.html to file listings.

--- a/downloadFiles/vrs0p4/index.html
+++ b/downloadFiles/vrs0p4/index.html
@@ -4,3 +4,5 @@
     <a href="./index.html">./index.html</a><br>
     <a href="./index.md">./index.md</a><br>
     <a href="./readme.txt">./readme.txt</a><br>
+  </body>
+</html>
