Added index.html to file listings.

--- a/index.html
+++ b/index.html
@@ -1,242 +1,3 @@
-<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>ivm by lawrennd</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>ivm</h1>
-        <p>MATLAB software for the Informative Vector Machine.</p>
-
-        <p class="view"><a href="https://github.com/lawrennd/ivm">View the Project on GitHub <small>lawrennd/ivm</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/lawrennd/ivm/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/lawrennd/ivm/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/lawrennd/ivm">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>
-<a id="ivm-software" class="anchor" href="#ivm-software" aria-hidden="true"><span class="octicon octicon-link"></span></a>IVM Software</h1>
-
-<p>This page describes examples of how to use the informative vector machine Software (IVM).</p>
-
-<h2>
-<a id="release-information" class="anchor" href="#release-information" aria-hidden="true"><span class="octicon octicon-link"></span></a>Release Information</h2>
-
-<p>Current release is 0.4.</p>
-
-<p>As well as downloading the IVM software you need to obtain the toolboxes specified below.</p>
-
-<table>
-<thead>
-<tr>
-<th><strong>Toolbox</strong></th>
-<th><strong>Version</strong></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="/kern/downloadFiles/vrs0p165">KERN</a></td>
-<td>0.165</td>
-</tr>
-<tr>
-<td><a href="/prior/downloadFiles/vrs0p131">PRIOR</a></td>
-<td>0.131</td>
-</tr>
-<tr>
-<td><a href="/optimi/downloadFiles/vrs0p132">OPTIMI</a></td>
-<td>0.132</td>
-</tr>
-<tr>
-<td><a href="/rochol/downloadFiles/vrs0p12">ROCHOL</a></td>
-<td>0.12</td>
-</tr>
-<tr>
-<td><a href="/ndlutil/downloadFiles/vrs0p155">NDLUTIL</a></td>
-<td>0.155</td>
-</tr>
-<tr>
-<td><a href="/mltools/downloadFiles/vrs0p123">MLTOOLS</a></td>
-<td>0.123</td>
-</tr>
-<tr>
-<td><a href="/datasets/downloadFiles/vrs0p131">DATASETS</a></td>
-<td>0.131</td>
-</tr>
-<tr>
-<td><a href="/noise/downloadFiles/vrs0p14">NOISE</a></td>
-<td>0.14</td>
-</tr>
-</tbody>
-</table>
-
-<p>Finally you will also need the <a href="http://www.ncrg.aston.ac.uk/netlab/index.php">NETLAB toolbox</a> in your path and Anton Schwaighofer's SVM light MATLAB interface, available <a href="http://ida.first.fraunhofer.de/%7Eanton/software.html">here</a> to run the <code>demThreeFive</code> example which compares with <a href="http://svmlight.joachims.org/">SVM light</a> version 5.00.</p>
-
-<h2>
-<a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples</h2>
-
-<h2>
-<a id="demclassification1" class="anchor" href="#demclassification1" aria-hidden="true"><span class="octicon octicon-link"></span></a><code>demClassification1</code>
-</h2>
-
-<p>The first example given is <code>demClassification1</code> which is a simple classification data set, where only one direction of the input is relevant in determining the decision boundary. An ARD MLP kernel is used in combination with a linear kernel. The ARD parameters in the linear and MLP kernel are constrained to be the same by the line:</p>
-
-<div class="highlight highlight-matlab"><pre><span class="pl-c">% Constrain the ARD parameters in the MLP and linear kernels to be the same.</span>
-model.kern = cmpndTieParameters(model.kern, {[<span class="pl-c1">4</span>, <span class="pl-c1">7</span>], [<span class="pl-c1">5</span>, <span class="pl-c1">8</span>]});</pre></div>
-
-<p>The resulting classification is shown below.</p>
-
-<p><img src="demClassificationOne1.png" alt=""></p>
-
-<p>ecision boundary from the <code>demClassification1.m</code> example. Postive class is red circles, negative class green crosses and active points are yellow dots. Decision boundary shown in red, contours at 0.25 and 0.75 probability shown in blue.</p>
-
-<h2>
-<a id="demclassification2" class="anchor" href="#demclassification2" aria-hidden="true"><span class="octicon octicon-link"></span></a><code>demClassification2</code>
-</h2>
-
-<p>The second example attempts to learn a Gaussian process give data that is sampled from a Gaussian process. The code is <code>demClassification2</code>. The underlying Gaussian process is based on an RBF kernel with variance inverse width 10. The IVM learns an inverse width of 15 and gives the classification is shown below.</p>
-
-<p><img src="demClassificationTwo2.png" alt=""></p>
-
-<p>Decision boundary from the <code>demClassification2.m</code> example. Postive class is red circles, negative class green crosses and active points are yellow dots. Decision boundary shown in red, contours at 0.25 and 0.75 probability shown in blue.</p>
-
-<h2>
-<a id="demclassification3" class="anchor" href="#demclassification3" aria-hidden="true"><span class="octicon octicon-link"></span></a><code>demClassification3</code>
-</h2>
-
-<p>This example is similar to <code>demClassification2</code>, only now there is a null category region in the data (a region of low data density between the classes). The example is for comparison with the null category noise model.</p>
-
-<p><img src="demClassificationThree3.png" alt=""></p>
-
-<p>Decision boundary from the <code>demClassification3.m</code> example. Postive class is red circles, negative class green crosses and active points are yellow dots. Decision boundary shown in red, contours at 0.25 and 0.75 probability shown in blue.</p>
-
-<h2>
-<a id="demordered1" class="anchor" href="#demordered1" aria-hidden="true"><span class="octicon octicon-link"></span></a><code>demOrdered1</code>
-</h2>
-
-<p>In this example the ordered categorical noise model is used (ordinal regression). The data is a simple data set for which a linear one dimensional model suffices. The IVM is given a combination of an RBF and linear kernel with ARD.For the ordered categorical case there are several parameters associated with the noise model (in particular the category widths), these are learnt too. The model learns that the system is linear and only one direction is important. The resulting classification is given below.</p>
-
-<p><img src="demOrderedOne1.png" alt=""></p>
-
-<p>Decision boundary from the <code>demOrdered1.m</code> example. Class 0 - red cross, Class 1 - green circles, Class 2 - blue crosses, Class 3 - cyan asterisks, Class 4 - pink squares, Class 5 - yellow diamonds. Class 6 - red triangles. Active points are yellow dots, note that because the kernel is linear by now the most informative points tend to be at the extrema. Decision boundaries shown in red, contours at 0.25 and 0.75 probability shown in blue.</p>
-
-<h2>
-<a id="demordered2" class="anchor" href="#demordered2" aria-hidden="true"><span class="octicon octicon-link"></span></a><code>demOrdered2</code>
-</h2>
-
-<p>Another example with the ordered categorical noise model, here the data is radial, the categories being along the radius of a circle. The IVM is given a combination of an RBF and linear kernel with ARD. Again there are several parameters associated with the noise model, and these are learnt using <code>ivmOptimiseNoise</code>. The resulting classification is given below.</p>
-
-<p><img src="demOrderedTwo2.png" alt=""></p>
-
-<p>Decision boundary from the <code>demOrdered1.m</code> example. Class 0 - red cross, Class 1 - green circles, Class 2 - blue crosses, Class 3 - cyan asterisks, Class 4 - pink squares, Class 5 - yellow diamonds. Class 6 - red triangles. Active points are yellow dots, note that because the kernel is linear by now the most informative points tend to be at the extrema. Decision boundaries shown in red, contours at 0.25 and 0.75 probability shown in blue.</p>
-
-<h2>
-<a id="demregression1" class="anchor" href="#demregression1" aria-hidden="true"><span class="octicon octicon-link"></span></a><code>demRegression1</code>
-</h2>
-
-<p>In this example the Gaussian noise model is used (standard regression). The data is sampled from a Gaussian process, only one input dimension is important. The IVM is given a combination of an RBF and linear kernel with ARD. The resulting regression is given below.</p>
-
-<p><img src="demRegressionOne1.png" alt=""></p>
-
-<p>Regression from the example <code>demRegression1.m</code>. Targets are red dots and active points are yellow dots.</p>
-
-<h2>
-<a id="demregression2" class="anchor" href="#demregression2" aria-hidden="true"><span class="octicon octicon-link"></span></a><code>demRegression2</code>
-</h2>
-
-<p>A second example with Gaussian noise, sampled from a Gaussian process, but this time with differing length scales.</p>
-
-<p><img src="demRegressionTwo2.png" alt=""></p>
-
-<p>Regression from the example <code>demRegression2.m</code>. Targets are red dots and active points are yellow dots.</p>
-
-<h2>
-<a id="benchmark-data-sets" class="anchor" href="#benchmark-data-sets" aria-hidden="true"><span class="octicon octicon-link"></span></a>Benchmark Data Sets</h2>
-
-<p>The function <code>ivmGunnarData</code> allows you to test the IVM on Gunnar Raetsch's benchmark data sets. Download the data sets, <a href="http://ida.first.fraunhofer.de/projects/bench/benchmarks.htm">from here</a> and expand the ringnorm data set into '$DATASETSDIRECTORY/gunnar/ringnorm'. Then run the following script.
-<code>&gt;&gt;ivmGunnarData('ringnorm', 1, {'rbf', 'bias', 'white'}, 1, 100)  ...    Final model:  IVM Model:   Noise Model:    Probit bias on process 1: 0.0439    Probit Sigma2: 0.0000   Kernel:    Compound kernel:      RBF inverse width: 0.0866 (length scale 3.3984)      RBF variance: 1.2350      Bias Variance: 8.2589      White Noise Variance: 0.0000  Test Error 0.0183  Model likelihood -56.7120</code></p>
-
-<p>You can try any of the data sets by replacing ringnorm with the relevant data set (note that they don't all work with only 100 active points inas in the example above, for example the 'banana' data set needs 200 active points to get a reasonable result,</p>
-
-<div class="highlight highlight-matlab"><pre><span class="pl-k">&gt;&gt; </span>ivmGunnarData(<span class="pl-s"><span class="pl-pds">'</span>banana<span class="pl-pds">'</span></span>, <span class="pl-c1">1</span>, {<span class="pl-s"><span class="pl-pds">'</span>rbf<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>bias<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>white<span class="pl-pds">'</span></span>}, <span class="pl-c1">1</span>, <span class="pl-c1">200</span>)  ...
-Final model<span class="pl-k">:  </span>IVM <span class="pl-c1">Model</span><span class="pl-k">:</span>
-Noise <span class="pl-c1">Model</span><span class="pl-k">:    </span>Probit
-bias <span class="pl-c1">on</span> process <span class="pl-c1">1</span><span class="pl-k">: </span><span class="pl-c1">0.1067</span>
-Probit Sigma2<span class="pl-k">: </span><span class="pl-c1">0.0000</span>
-Kernel<span class="pl-k">:    </span>Compound
-kernel<span class="pl-k">:      </span>RBF inverse <span class="pl-c1">width</span><span class="pl-k">: </span><span class="pl-c1">1.6411</span> (<span class="pl-k">length</span> <span class="pl-c1">scale</span> <span class="pl-c1">0.7806</span>)
-RBF variance<span class="pl-k">: </span><span class="pl-c1">0.2438</span>
-Bias Variance<span class="pl-k">: </span><span class="pl-c1">0.0000</span>
-White Noise Variance<span class="pl-k">: </span><span class="pl-c1">0.0148</span>
-Test Error <span class="pl-c1">0.1129</span>
-<span class="pl-c1">Model</span> likelihood <span class="pl-c1">175.3588</span></pre></div>
-
-<p><img src="demBanana1.png" alt=""></p>
-
-<p>Decision boundary from the banana example. Postive class is red circles, negative class green crosses and active points are yellow dots. Decision boundary shown in red, contours at 0.25 and 0.75 probability shown in blue.</p>
-
-<h2>
-<a id="null-category-noise-model" class="anchor" href="#null-category-noise-model" aria-hidden="true"><span class="octicon octicon-link"></span></a>Null Category Noise Model</h2>
-
-<h2>
-<a id="examples-1" class="anchor" href="#examples-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples</h2>
-
-<p>The toy data example in the papers can be recreated using:</p>
-
-<pre><code>&gt;&gt; demUnlabelled1
-</code></pre>
-
-<p>and leads to the decision boundary given below. A standard IVM based classifier can be run on the data using</p>
-
-<pre><code>&gt;&gt; demUnlabelled2
-</code></pre>
-
-<p><img src="demUnlabelledOne1.png" alt=""><img src="demUnlabelledOne2.png" alt=""></p>
-
-<p>The null category noise model run on toy data. <em>Top</em>: using the null category, the true nature of the decision boundary is recovered. <em>Bottom</em>: the standard IVM, does not recover the true decision boundary.
-The other USPS digit classification example given in the NIPS paper can be re-run with:</p>
-
-<pre><code>&gt;&gt; demThreeFive
-</code></pre>
-
-<p>Be aware that this code can take some time to run. The results, in the form of averaged area under ROC curve against probability of missing label, can be plotted using</p>
-
-<pre><code>&gt;&gt; demThreeFiveResults
-</code></pre>
-
-<p>Plot of average area under ROC curve against probability of label being present. The red line is the standard IVM based classifier, the blue dotted line is the null category noise model based classifier, the green dash-dot line is the a normal SVM and the mauve dashed line is the transductive SVM.</p>
-
-<p>Page updated on Sat Jan 13 01:05:38 2007</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/lawrennd">lawrennd</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-62968536-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
-  </body>
-</html>
+    <a href="./.git/">./.git/</a><br>
