Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -2,3 +2,4 @@
   <body>
     <a href="./vrs0p1/">./vrs0p1/</a><br>
     <a href="./vrs0p22/">./vrs0p22/</a><br>
+    <a href="./vrs0p3/">./vrs0p3/</a><br>
