--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -4,3 +4,4 @@
     <a href="./vrs0p22/">./vrs0p22/</a><br>
     <a href="./vrs0p3/">./vrs0p3/</a><br>
     <a href="./vrs0p31/">./vrs0p31/</a><br>
+    <a href="./vrs0p32/">./vrs0p32/</a><br>
