Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -6,3 +6,11 @@
     <a href="./vrs0p31/">./vrs0p31/</a><br>
     <a href="./vrs0p32/">./vrs0p32/</a><br>
     <a href="./vrs0p4/">./vrs0p4/</a><br>
+    <a href="./IVM0p4.zip">./IVM0p4.zip</a><br>
+    <a href="./index.html">./index.html</a><br>
+    <a href="./index.md">./index.md</a><br>
+    <a href="./matfiles.zip">./matfiles.zip</a><br>
+    <a href="./readme.txt">./readme.txt</a><br>
+    <a href="./versions.txt">./versions.txt</a><br>
+  </body>
+</html>
