--- a/downloadFiles/vrs0p31/index.html
+++ b/downloadFiles/vrs0p31/index.html
@@ -1,5 +1,7 @@
 <html>
+  <title>Software Download</title>
   <body>
+  <h2>Directory Listing</h2>
     <a href="./index.html">./index.html</a><br>
     <a href="./index.md">./index.md</a><br>
     <a href="./matfiles.zip">./matfiles.zip</a><br>
