Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -4,3 +4,4 @@
   <h2>Directory Listing</h2>
     <a href="./vrs0p1/">./vrs0p1/</a><br>
     <a href="./vrs0p22/">./vrs0p22/</a><br>
+    <a href="./vrs0p3/">./vrs0p3/</a><br>
