Added index.html to file listings.

--- a/downloadFiles/vrs0p22/index.html
+++ b/downloadFiles/vrs0p22/index.html
@@ -1,7 +1,6 @@
-<html>
-  <title>Software Download</title>
   <body>
   <h2>Directory Listing</h2>
+    <a href="../">..</a><br>
     <a href="./matfiles.zip">./matfiles.zip</a><br>
     <a href="./mfiles.zip">./mfiles.zip</a><br>
     <a href="./plfiles.zip">./plfiles.zip</a><br>
