--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -10,3 +10,5 @@
     <a href="./vrs0p31/">./vrs0p31/</a><br>
     <a href="../">..</a><br>
     <a href="./vrs0p32/">./vrs0p32/</a><br>
+    <a href="../">..</a><br>
+    <a href="./vrs0p4/">./vrs0p4/</a><br>
