Added index.html to file listings.

--- a/downloadFiles/vrs0p32/index.html
+++ b/downloadFiles/vrs0p32/index.html
@@ -1,7 +1,6 @@
-<html>
-  <title>Software Download</title>
   <body>
   <h2>Directory Listing</h2>
+    <a href="../">..</a><br>
     <a href="./IVM0p32.zip">./IVM0p32.zip</a><br>
     <a href="./readme.txt">./readme.txt</a><br>
   </body>
