--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -8,3 +8,5 @@
     <a href="./vrs0p3/">./vrs0p3/</a><br>
     <a href="../">..</a><br>
     <a href="./vrs0p31/">./vrs0p31/</a><br>
+    <a href="../">..</a><br>
+    <a href="./vrs0p32/">./vrs0p32/</a><br>
