Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -12,3 +12,9 @@
     <a href="./vrs0p32/">./vrs0p32/</a><br>
     <a href="../">..</a><br>
     <a href="./vrs0p4/">./vrs0p4/</a><br>
+    <a href="./IVM0p4.zip">./IVM0p4.zip</a><br>
+    <a href="./matfiles.zip">./matfiles.zip</a><br>
+    <a href="./readme.txt">./readme.txt</a><br>
+    <a href="./versions.txt">./versions.txt</a><br>
+  </body>
+</html>
