--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -1,20 +1,19 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset=utf-8>
+    <meta http-equiv=X-UA-Compatible content=chrome=1>
+    <title>kern by lawrennd</title>
+
+    <link rel=stylesheet href=../stylesheets/styles.css>
+    <link rel=stylesheet href=../stylesheets/github-light.css>
+    <meta name=viewport content=width=device-width, initial-scale=1, user-scalable=no>
+    <!--[if lt IE 9]>
+    <script src=//html5shiv.googlecode.com/svn/trunk/html5.js></script>
+    <![endif]-->
+    <title>Software Download</title>
+  </head>
   <body>
   <h2>Directory Listing</h2>
     <a href="../">..</a><br>
     <a href="./vrs0p1/">./vrs0p1/</a><br>
-    <a href="../">..</a><br>
-    <a href="./vrs0p22/">./vrs0p22/</a><br>
-    <a href="../">..</a><br>
-    <a href="./vrs0p3/">./vrs0p3/</a><br>
-    <a href="../">..</a><br>
-    <a href="./vrs0p31/">./vrs0p31/</a><br>
-    <a href="../">..</a><br>
-    <a href="./vrs0p32/">./vrs0p32/</a><br>
-    <a href="../">..</a><br>
-    <a href="./vrs0p4/">./vrs0p4/</a><br>
-    <a href="./IVM0p4.zip">./IVM0p4.zip</a><br>
-    <a href="./matfiles.zip">./matfiles.zip</a><br>
-    <a href="./readme.txt">./readme.txt</a><br>
-    <a href="./versions.txt">./versions.txt</a><br>
-  </body>
-</html>
