Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -18,3 +18,4 @@
     <p>Download the  software using the links below.</p>
       <li><a href="../">..</a></li>
       <li><a href="./vrs0p1/">./vrs0p1/</a></li>
+      <li><a href="./vrs0p22/">./vrs0p22/</a></li>
