--- a/downloadFiles/vrs0p4/index.html
+++ b/downloadFiles/vrs0p4/index.html
@@ -15,8 +15,10 @@
   </head>
   <body>
   <h2>Directory Listing</h2>
-    <a href="../">..</a><br>
-    <a href="./IVM0p4.zip">./IVM0p4.zip</a><br>
-    <a href="./readme.txt">./readme.txt</a><br>
+    <p>Download the  software using the links below.</p>
+      <li><a href="../">..</a></li>
+      <li><a href="./IVM0p4.zip">./IVM0p4.zip</a></li>
+      <li><a href="./readme.txt">./readme.txt</a></li>
+    </ul>
   </body>
 </html>
