--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -19,3 +19,4 @@
       <li><a href="../">..</a></li>
       <li><a href="./vrs0p1/">./vrs0p1/</a></li>
       <li><a href="./vrs0p22/">./vrs0p22/</a></li>
+      <li><a href="./vrs0p3/">./vrs0p3/</a></li>
