--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -22,3 +22,4 @@
       <li><a href="./vrs0p22/">./vrs0p22/</a></li>
       <li><a href="./vrs0p3/">./vrs0p3/</a></li>
       <li><a href="./vrs0p31/">./vrs0p31/</a></li>
+      <li><a href="./vrs0p32/">./vrs0p32/</a></li>
