Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -24,3 +24,10 @@
       <li><a href="./vrs0p31/">./vrs0p31/</a></li>
       <li><a href="./vrs0p32/">./vrs0p32/</a></li>
       <li><a href="./vrs0p4/">./vrs0p4/</a></li>
+      <li><a href="./IVM0p4.zip">./IVM0p4.zip</a></li>
+      <li><a href="./matfiles.zip">./matfiles.zip</a></li>
+      <li><a href="./readme.txt">./readme.txt</a></li>
+      <li><a href="./versions.txt">./versions.txt</a></li>
+    </ul>
+  </body>
+</html>
