Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -16,18 +16,5 @@
   <body>
   <h2>Directory Listing</h2>
     <p>Download the  software using the links below.</p>
-    <ul>
-      <li><a href="../">..</a></li>
-      <li><a href="./vrs0p1/">./vrs0p1/</a></li>
-      <li><a href="./vrs0p22/">./vrs0p22/</a></li>
-      <li><a href="./vrs0p3/">./vrs0p3/</a></li>
-      <li><a href="./vrs0p31/">./vrs0p31/</a></li>
-      <li><a href="./vrs0p32/">./vrs0p32/</a></li>
-      <li><a href="./vrs0p4/">./vrs0p4/</a></li>
-      <li><a href="./IVM0p4.zip">./IVM0p4.zip</a></li>
-      <li><a href="./matfiles.zip">./matfiles.zip</a></li>
-      <li><a href="./readme.txt">./readme.txt</a></li>
-      <li><a href="./versions.txt">./versions.txt</a></li>
-    </ul>
-  </body>
-</html>
+      <a href="../">..</a><br>
+      <a href="./vrs0p1/">./vrs0p1/</a><br>
