--- a/downloadFiles/vrs0p1/index.html
+++ b/downloadFiles/vrs0p1/index.html
@@ -16,11 +16,9 @@
   <body>
   <h2>Directory Listing</h2>
     <p>Download the  software using the links below.</p>
-    <ul>
-      <li><a href="../">..</a></li>
-      <li><a href="./matfiles.zip">./matfiles.zip</a></li>
-      <li><a href="./mfiles.zip">./mfiles.zip</a></li>
-      <li><a href="./readme.txt">./readme.txt</a></li>
-    </ul>
+      <a href="../">..</a><br>
+      <a href="./matfiles.zip">./matfiles.zip</a><br>
+      <a href="./mfiles.zip">./mfiles.zip</a><br>
+      <a href="./readme.txt">./readme.txt</a><br>
   </body>
 </html>
