Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -22,3 +22,4 @@
       <a href="./vrs0p3/">./vrs0p3/</a><br>
       <a href="./vrs0p31/">./vrs0p31/</a><br>
       <a href="./vrs0p32/">./vrs0p32/</a><br>
+      <a href="./vrs0p4/">./vrs0p4/</a><br>
