--- a/downloadFiles/vrs0p31/index.html
+++ b/downloadFiles/vrs0p31/index.html
@@ -16,13 +16,11 @@
   <body>
   <h2>Directory Listing</h2>
     <p>Download the  software using the links below.</p>
-    <ul>
-      <li><a href="../">..</a></li>
-      <li><a href="./matfiles.zip">./matfiles.zip</a></li>
-      <li><a href="./mfiles.zip">./mfiles.zip</a></li>
-      <li><a href="./readme.txt">./readme.txt</a></li>
-      <li><a href="./techInfo.txt">./techInfo.txt</a></li>
-      <li><a href="./versions.txt">./versions.txt</a></li>
-    </ul>
+      <a href="../">..</a><br>
+      <a href="./matfiles.zip">./matfiles.zip</a><br>
+      <a href="./mfiles.zip">./mfiles.zip</a><br>
+      <a href="./readme.txt">./readme.txt</a><br>
+      <a href="./techInfo.txt">./techInfo.txt</a><br>
+      <a href="./versions.txt">./versions.txt</a><br>
   </body>
 </html>
