Added index.html to file listings.

--- a/downloadFiles/vrs0p32/index.html
+++ b/downloadFiles/vrs0p32/index.html
@@ -16,10 +16,8 @@
   <body>
   <h2>Directory Listing</h2>
     <p>Download the  software using the links below.</p>
-    <ul>
-      <li><a href="../">..</a></li>
-      <li><a href="./IVM0p32.zip">./IVM0p32.zip</a></li>
-      <li><a href="./readme.txt">./readme.txt</a></li>
-    </ul>
+      <a href="../">..</a><br>
+      <a href="./IVM0p32.zip">./IVM0p32.zip</a><br>
+      <a href="./readme.txt">./readme.txt</a><br>
   </body>
 </html>
