--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -14,18 +14,8 @@
     <title>Software Download</title>
   </head>
   <body>
-  <h2>Directory Listing</h2>
+  <h2>Software Download</h2>
+  <h3>Directory Listing</h3>
     <p>Download the  software using the links below.</p>
       <a href="../">..</a><br>
       <a href="./vrs0p1/">./vrs0p1/</a><br>
-      <a href="./vrs0p22/">./vrs0p22/</a><br>
-      <a href="./vrs0p3/">./vrs0p3/</a><br>
-      <a href="./vrs0p31/">./vrs0p31/</a><br>
-      <a href="./vrs0p32/">./vrs0p32/</a><br>
-      <a href="./vrs0p4/">./vrs0p4/</a><br>
-      <a href="./IVM0p4.zip">./IVM0p4.zip</a><br>
-      <a href="./matfiles.zip">./matfiles.zip</a><br>
-      <a href="./readme.txt">./readme.txt</a><br>
-      <a href="./versions.txt">./versions.txt</a><br>
-  </body>
-</html>
