--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -21,3 +21,4 @@
       <a href="./vrs0p1/">./vrs0p1/</a><br>
       <a href="./vrs0p22/">./vrs0p22/</a><br>
       <a href="./vrs0p3/">./vrs0p3/</a><br>
+      <a href="./vrs0p31/">./vrs0p31/</a><br>
