--- a/downloadFiles/vrs0p31/index.html
+++ b/downloadFiles/vrs0p31/index.html
@@ -14,7 +14,8 @@
     <title>Software Download</title>
   </head>
   <body>
-  <h2>Directory Listing</h2>
+  <h2>Software Download</h2>
+  <h3>Directory Listing</h3>
     <p>Download the  software using the links below.</p>
       <a href="../">..</a><br>
       <a href="./matfiles.zip">./matfiles.zip</a><br>
