Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -19,3 +19,4 @@
     <p>Download the ivm software using the links below.</p>
       <a href="../">..</a><br>
       <a href="./vrs0p1/">./vrs0p1/</a><br>
+      <a href="./vrs0p22/">./vrs0p22/</a><br>
