Added index.html to file listings.

--- a/downloadFiles/vrs0p1/index.html
+++ b/downloadFiles/vrs0p1/index.html
@@ -15,9 +15,10 @@
   </head>
   <body>
   <h2>ivm software</h2>
+  <p><a href="/ivm/">ivm software web page</a></p>
+  <p><a href="https://github.com/lawrennd/ivm/">ivm software on GitHub</a></p>
   <h3>Directory Listing</h3>
     <p>Download the ivm software using the links below.</p>
-      <a href="../">..</a><br>
       <a href="./matfiles.zip">./matfiles.zip</a><br>
       <a href="./mfiles.zip">./mfiles.zip</a><br>
       <a href="./readme.txt">./readme.txt</a><br>
