Added index.html to file listings.

--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -19,3 +19,4 @@
   <p><a href="https://github.com/lawrennd/ivm/">ivm software on GitHub</a></p>
     <p>You can download the ivm software using the links below.</p>
       <a href="./vrs0p1/">./vrs0p1/</a><br>
+      <a href="./vrs0p22/">./vrs0p22/</a><br>
