--- a/downloadFiles/vrs0p22/index.html
+++ b/downloadFiles/vrs0p22/index.html
@@ -17,8 +17,7 @@
   <h2>ivm software</h2>
   <p><a href="/ivm/">ivm software web page</a></p>
   <p><a href="https://github.com/lawrennd/ivm/">ivm software on GitHub</a></p>
-  <h3>Directory Listing</h3>
-    <p>Download the ivm software using the links below.</p>
+    <p>You can download the ivm software using the links below.</p>
       <a href="./matfiles.zip">./matfiles.zip</a><br>
       <a href="./mfiles.zip">./mfiles.zip</a><br>
       <a href="./plfiles.zip">./plfiles.zip</a><br>
