--- a/downloadFiles/vrs0p32/index.html
+++ b/downloadFiles/vrs0p32/index.html
@@ -17,8 +17,7 @@
   <h2>ivm software</h2>
   <p><a href="/ivm/">ivm software web page</a></p>
   <p><a href="https://github.com/lawrennd/ivm/">ivm software on GitHub</a></p>
-  <h3>Directory Listing</h3>
-    <p>Download the ivm software using the links below.</p>
+    <p>You can download the ivm software using the links below.</p>
       <a href="./IVM0p32.zip">./IVM0p32.zip</a><br>
       <a href="./readme.txt">./readme.txt</a><br>
   </body>
