--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -20,3 +20,4 @@
     <p>You can download the ivm software using the links below.</p>
       <a href="./vrs0p1/">./vrs0p1/</a><br>
       <a href="./vrs0p22/">./vrs0p22/</a><br>
+      <a href="./vrs0p3/">./vrs0p3/</a><br>
