--- a/downloadFiles/vrs0p32/index.html
+++ b/downloadFiles/vrs0p32/index.html
@@ -15,9 +15,8 @@
   </head>
   <body>
   <h2>ivm software</h2>
-  <p><a href="/ivm/">ivm software web page</a></p>
-  <p><a href="https://github.com/lawrennd/ivm/">ivm software on GitHub</a></p>
-    <p>You can download the ivm software using the links below.</p>
+  <p>From this page you can download different historic versions of the ivm software. You can find the main ivm software page <a href="/ivm/">here</a> and you can find the code on github <a href="https://github.com/lawrennd/ivm/">here</a>.</p>
+    <p>Download the ivm software using the links below.</p>
       <a href="./IVM0p32.zip">./IVM0p32.zip</a><br>
       <a href="./readme.txt">./readme.txt</a><br>
   </body>
