--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -18,3 +18,4 @@
   <p>From this page you can download different historic versions of the <b>ivm</b> software. You can also find the main <b>ivm</b> software page <a href="/ivm/">here</a> and you can find the code on github <a href="https://github.com/lawrennd/ivm/">here</a>.</p>
     <p>Download the ivm software using the links below.</p>
       <a href="./vrs0p1/">./vrs0p1/</a><br>
+      <a href="./vrs0p22/">./vrs0p22/</a><br>
