--- a/downloadFiles/index.html
+++ b/downloadFiles/index.html
@@ -11,21 +11,10 @@
     <!--[if lt IE 9]>
     <script src=//html5shiv.googlecode.com/svn/trunk/html5.js></script>
     <![endif]-->
-    <title>Software Download</title>
+    <title>ivm software download</title>
   </head>
   <body>
   <h2>ivm software</h2>
-  <p>From this page you can download different historic versions of the ivm software. You can find the main ivm software page <a href="/ivm/">here</a> and you can find the code on github <a href="https://github.com/lawrennd/ivm/">here</a>.</p>
+  <p>From this page you can download different historic versions of the <b>ivm</b> software. You can also find the main <b>ivm</b> software page <a href="/ivm/">here</a> and you can find the code on github <a href="https://github.com/lawrennd/ivm/">here</a>.</p>
     <p>Download the ivm software using the links below.</p>
       <a href="./vrs0p1/">./vrs0p1/</a><br>
-      <a href="./vrs0p22/">./vrs0p22/</a><br>
-      <a href="./vrs0p3/">./vrs0p3/</a><br>
-      <a href="./vrs0p31/">./vrs0p31/</a><br>
-      <a href="./vrs0p32/">./vrs0p32/</a><br>
-      <a href="./vrs0p4/">./vrs0p4/</a><br>
-      <a href="./IVM0p4.zip">./IVM0p4.zip</a><br>
-      <a href="./matfiles.zip">./matfiles.zip</a><br>
-      <a href="./readme.txt">./readme.txt</a><br>
-      <a href="./versions.txt">./versions.txt</a><br>
-  </body>
-</html>
