--- a/downloadFiles/vrs0p3/index.html
+++ b/downloadFiles/vrs0p3/index.html
@@ -11,11 +11,11 @@
     <!--[if lt IE 9]>
     <script src=//html5shiv.googlecode.com/svn/trunk/html5.js></script>
     <![endif]-->
-    <title>Software Download</title>
+    <title>ivm software download</title>
   </head>
   <body>
   <h2>ivm software</h2>
-  <p>From this page you can download different historic versions of the ivm software. You can find the main ivm software page <a href="/ivm/">here</a> and you can find the code on github <a href="https://github.com/lawrennd/ivm/">here</a>.</p>
+  <p>From this page you can download different historic versions of the <b>ivm</b> software. You can also find the main <b>ivm</b> software page <a href="/ivm/">here</a> and you can find the code on github <a href="https://github.com/lawrennd/ivm/">here</a>.</p>
     <p>Download the ivm software using the links below.</p>
       <a href="./matfiles.zip">./matfiles.zip</a><br>
       <a href="./mfiles.zip">./mfiles.zip</a><br>
